--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
               <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Text Styling</h4>
-              <p class="text-muted">Photoshop</p>
+              <h4>Logo</h4>
+              <p class="text-muted">Illustrator</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,8 +154,8 @@
               <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Logo</h4>
-              <p class="text-muted">Illustrator</p>
+              <h4>Text Styling</h4>
+              <p class="text-muted">Photoshop</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -504,8 +504,10 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
+
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  
+                  <h2 class="text-uppercase">Merch Project</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -538,8 +540,10 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
+
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+
+                  <h2 class="text-uppercase">Personal Logo</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -572,8 +576,10 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
+
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+
+                  <h2 class="text-uppercase">Liquid Text Styling</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
