--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -165,11 +165,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/blockchain-screenshot.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Blockchain Potential</h4>
+              <p class="text-muted">First HTML/CSS page</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -506,7 +506,7 @@
                 <div class="modal-body">
 
                   <!-- Project Details Go Here -->
-                  
+
                   <h2 class="text-uppercase">Merch Project</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
