--- a/index.html
+++ b/index.html
@@ -508,13 +508,13 @@
                   <!-- Project Details Go Here -->
 
                   <h2 class="text-uppercase">Merch Project</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">A project to create merchandise for "Blastoid".</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>For this project we were assigned to create merchandise from scratch for an imaginary company.  We were given a name and logo, and then had to create from there.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Date:  2017</li>
+                    <!-- <li>Client: Threads</li> -->
+                    <li>Category: Photoshop</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -544,13 +544,15 @@
                   <!-- Project Details Go Here -->
 
                   <h2 class="text-uppercase">Personal Logo</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">A logo for my personal brand.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>On the first day of class we learned about personal branding and were given the assignment to brainstorm concepts we would like for our personal 
+                    brand and logo.  I have continually worked on my personal logo -- editing, re-editing, and then completely starting over several times.
+                  </p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li>Date: 2017 - Present</li>
+                    <!-- <li> Client: </li> -->
+                    <li>Category: Photoshop & Illustrator</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -580,13 +582,13 @@
                   <!-- Project Details Go Here -->
 
                   <h2 class="text-uppercase">Liquid Text Styling</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">A fun project to practice using photoshop's text styling.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>In this simple project we refined our Photoshop skills by practicing text styling in Photoshop.</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li>Date: 2018</li>
+                    <li></li>
+                    <li>Category: Photoshop</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
