--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
+              <a class="nav-link js-scroll-trigger" href="#connect">Connect</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -97,10 +97,10 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-code fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Critical Thinking & Problem Solving</h4>
+            <p class="text-muted">An essential part of programming.</p>
           </div>
         </div>
       </div>
@@ -205,6 +205,7 @@
     </section>
 
     <!-- About -->
+    <!--
     <section id="about">
       <div class="container">
         <div class="row">
@@ -284,19 +285,20 @@
         </div>
       </div>
     </section>
+  -->
 
     <!-- Team -->
-    <!-- <section class="bg-light" id="team">
+    <section class="bg-light" id="connect">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Connect with Me!</h2>
+            <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
-            <div class="team-member">
+            <!-- <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
               <h4>Kay Garland</h4>
               <p class="text-muted">Lead Designer</p>
@@ -317,26 +319,26 @@
                   </a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
+              <h4>Jacob Wright</h4>
+              <p class="text-muted">Web Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <!-- <a href="#">
                     <i class="fa fa-twitter"></i>
+                  </a> -->
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.github.com/jacobcwright">
+                    <i class="fa fa-github"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/jacob-c-wright/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -344,7 +346,7 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="team-member">
+            <!-- <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
               <h4>Diana Pertersen</h4>
               <p class="text-muted">Lead Developer</p>
@@ -365,7 +367,7 @@
                   </a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="row">
@@ -374,9 +376,10 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Clients -->
+<!--
     <section class="py-5">
       <div class="container">
         <div class="row">
@@ -403,7 +406,7 @@
         </div>
       </div>
     </section>
-
+-->
     <!-- Contact -->
     <section id="contact">
       <div class="container">
@@ -458,24 +461,24 @@
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">
                   <i class="fa fa-twitter"></i>
+                </a> -->
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.github.com/jacobcwright">
+                  <i class="fa fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/jacob-c-wright/">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
                 <a href="#">Privacy Policy</a>
@@ -484,7 +487,7 @@
                 <a href="#">Terms of Use</a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </footer>
