--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 
     <title>Jacob Wright - Portfolio</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
   </head>
@@ -86,6 +81,7 @@
               <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Graphic Design</h4>
+            <br> 
             <p class="text-muted">Proficient in Photoshop & Illustrator.</p>
           </div>
           <div class="col-md-4">
@@ -100,11 +96,11 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid -->
+    <!-- Portfolio -->
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center">
+          <div class="col-lg-12 text-center"  >
             <h2 class="section-heading text-uppercase">Portfolio</h2>
             <h3 class="section-subheading text-muted">Here are a few of my personal projects, as well as some projects we completed throughout FIND.</h3>
           </div>
@@ -187,18 +183,18 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/rock-screenshot.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>Rock! Paper! Scissors!</h4>
+              <p class="text-muted">JavaScript</p>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Team -->
+    <!-- Connect -->
     <section class="" id="connect">
       <div class="container">
         <div class="row">
@@ -264,7 +260,7 @@
       </div> -->
     </footer>
 
-    <!-- Portfolio Modals -->
+    <!-- portfolio modals -->
 
     <!-- Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -280,7 +276,6 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
 
-                  <!-- Project Details Go Here -->
 
                   <h2 class="text-uppercase">Merch Project</h2>
                   <p class="item-intro text-muted">A project to create merchandise for "Blastoid".</p>
@@ -288,7 +283,6 @@
                   <p>For this project we were assigned to create merchandise from scratch for an imaginary company.  We were given a name and logo, and then had to create from there.</p>
                   <ul class="list-inline">
                     <li>Date:  2017</li>
-                    <!-- <li>Client: Threads</li> -->
                     <li>Category: Photoshop</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -302,7 +296,7 @@
       </div>
     </div>
 
-    <!-- Modal 2 -->
+    <!-- modal 2 -->
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -316,7 +310,6 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
 
-                  <!-- Project Details Go Here -->
 
                   <h2 class="text-uppercase">Personal Logo</h2>
                   <p class="item-intro text-muted">A logo for my personal brand.</p>
@@ -354,8 +347,6 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
 
-                  <!-- Project Details Go Here -->
-
                   <h2 class="text-uppercase">Liquid Text Styling</h2>
                   <p class="item-intro text-muted">A fun project to practice using photoshop's text styling.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
@@ -389,15 +380,17 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <!-- Project Details Go Here -->
+
                   <h2 class="text-uppercase">Blockchain's Potential</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">An informative page for Blockchain Technology.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/blockchain-screenshot.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>For this project we were assigned to create a simple About page, about either ourselves, or something we enjoy.  I decided to do my 
+                    simple webpage on Blockchain Technology.  On the page I have various links to articles and papers explaining blockchain Technology, as well
+                    as current cryptocurrency prices, and Blockchain Technology news.
+                  </p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li>Category: HTML/ CSS</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -423,15 +416,14 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <!-- Project Details Go Here -->
+
                   <h2 class="text-uppercase">Joke Generator</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <!-- <p class="item-intro text-muted">A basic </p> -->
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/joke-screenshot.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>This project was an introduction and example of the usage for API calls.  Although a very simple project, it was very enjoyable and educational. (</p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
+                    <li>Category: API calls </li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -457,15 +449,16 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
+                  <h2 class="text-uppercase">Rock! Paper! Scissors!</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/rock-screenshot.png" alt="">
+                  <p>For this project we were assigned to create a functioning rock, paper, scissors game within a class period. This project was the catalyst
+                    for my JavaScript understanding.
+                  </p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
+                    <li>Date: February 2018</li>
+                    <!-- <li>Client: </li> -->
+                    <li>Category: JavaScript</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -478,20 +471,11 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Contact form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
-    <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
-
   </body>
 
 </html>
