--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
                   <h2 class="text-uppercase">Joke Generator</h2>
                   <!-- <p class="item-intro text-muted">A basic </p> -->
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/joke-screenshot.png" alt="">
-                  <p>This project was an introduction and example of the usage for API calls.  Although a very simple project, it was very enjoyable and educational. (</p>
+                  <p>This project was an introduction and example of the usage for API calls.  Although a very simple project, it was very enjoyable and educational.
+                  </p>
                   <ul class="list-inline">
                     <li>Date: January 2017</li>
                     <li>Category: API calls </li>
