--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <h2 class="text-uppercase">Rock! Paper! Scissors!</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/rock-screenshot.png" alt="">
                   <p>For this project we were assigned to create a functioning rock, paper, scissors game within a class period. This project was the catalyst
                     for my JavaScript understanding.
